=======
CHANGES
=======

2.0.0 (unreleased)
------------------

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


1.1.2 (2009-09-24)
------------------

- Use the standard Python doctest module instead of the deprecated
  zope.testing.doctest.


1.1.1 (2009-09-09)
------------------

- Fixed homepage link and mailing list address.
- Cleaned up.


1.1 (2007-10-02)
----------------

- Refactored package setup.


1.0 (2007-09-28)
----------------

- No further changes since 1.0b2


1.0b2 (2007-07-09)
------------------

- Removed ``_p_independent`` method from ``AbstractValue`` class.


1.0b1 (2007-07-03)
------------------

- Initial release.