@@ -1,0 +1,9 @@
+include *.rst
+include *.txt
+include bootstrap.py
+include buildout.cfg
+include tox.ini
+
+recursive-include src *
+
+global-exclude *.pyc
